# diffusion-maps-with-nystrom

./: DiffusionMaps.py  LICENSE  README.md  aux_functions.py  pyproject.toml
experiments/: environment.yml  metrics.py  run_experiments.sh  science.mplstyle
experiments/helix/: experiment.py  load_data.py  plot_results.py
experiments/mnist/: experiment.py  load_data.py  plot_results.py
experiments/phoneme/: experiment.py  load_data.py  plot_results.py
experiments/swiss_roll/: experiment.py  load_data.py  plot_results.py
src/diffusionmaps/: __init__.py  diffusion_maps.py
